# SystraceDemoApp

./: .gitignore  README.md  mytracefile.txt
app/: README.md  build.gradle
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: ATraceLogger.cpp
app/src/main/cpp/linker/: CMakeLists.txt  elfSharedLibData.cpp  elfSharedLibData.h  hooks.cpp  hooks.h  linker.cpp  locks.h  plthooks.cpp  plthooks.h  sharedlibs.cpp  sharedlibs.h  sig_safe_write.c  sigmux.c  trampoline.cpp  trampoline.h
app/src/main/java/com/linkedin/android/atrace/: Atrace.java  MainActivity.java
app/src/main/res/layout/: activity_main.xml
gradle/wrapper/: gradle-wrapper.properties
